# teanga2

./: pyproject.toml
.github/workflows/: python.yml
teanga/: __init__.py  corpus.py  document.py  rdf.py  stream.py  transforms.py  utils.py
teanga/conllu/: __init__.py  conllu.py
teanga/spacy/: __init__.py  teanga_spacy.py
tests/: test_conllu.py  test_corpus.py  test_doc.py  test_rdf.py  test_utils.py
