[tool.poetry]
name = "teanga"
version = "0.1.0"
description = "Teanga - Layer-based annotation of corpora with NLP"
authors = ["John P. McCrae <john@mccr.ae>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"
requests = "^2.31.0"
deprecated = "^1.2.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"


[tool.poetry.group.spacy.dependencies]
spacy = "^3.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
