[tool.poetry]
name = "teanga"
version = "0.1.0"
description = "Teanga - Layer-based annotation of corpora with NLP"
authors = ["John P. McCrae <john@mccr.ae>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "^6.0.1"
requests = "^2.31.0"
rdflib = "^7.0.0"
deprecated = "^1.2.14"
regex = "^2024.5.15"
conllu = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.29"
mkdocs-gen-files = "^0.5.0"
flake8 = "^7.1.1"


[tool.poetry.group.spacy.dependencies]
spacy = "^3.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
